fix: right align join code

--- a/src/components/TeamCard/index.less
+++ b/src/components/TeamCard/index.less
@@ -22,7 +22,6 @@
 
 .button-container{
     display: flex;
-    justify-content:flex-end;
     margin-top: @margin-base;
     width: 100%;
 }
